update to .snap M1 format

--- a/golang-httpd-minimal/meta/package.yaml
+++ b/golang-httpd-minimal/meta/package.yaml
@@ -2,10 +2,12 @@ name: golang-httpd-minimal
 frameworks: ubuntu-core-15.04-dev1
 maintainer: Alexander Sack <asac@ubuntu.com>
 architecture: amd64
+icon: go.svg
 version: 1.0.1
-hooks:
- httpd:
-  systemd: snappy-example-minimal-goweb.click-service
+services:
+ - name: webserver
+   description: "snappy example: golang mini webserver"
+   start: ./golang-httpd-minimal
 ports:
  required: 80
 
