use @canonical.com as maintainer field

--- a/golang-httpd-minimal/meta/package.yaml
+++ b/golang-httpd-minimal/meta/package.yaml
@@ -1,6 +1,6 @@
 name: golang-httpd-minimal
 frameworks: ubuntu-core-15.04-dev1
-maintainer: Alexander Sack <asac@ubuntu.com>
+maintainer: Alexander Sack <asac@canonical.com>
 architecture: amd64
 icon: go.svg
 version: 1.0.1
