--- a/hello-world/meta/package.yaml
+++ b/hello-world/meta/package.yaml
@@ -1,8 +1,8 @@
 name: hello-world
 version: 1.0
-maintainer: Michael Vogt <mvo@ubuntu.com>
+vendor: Michael Vogt <mvo@ubuntu.com>
 icon: meta/hello.svg
-framework: ubuntu-core-15.04-dev1
+frameworks: ubuntu-core-15.04-dev1
 binaries:
  - name: bin/hello
 
