rename golang-httpd-minimal-example/ => go-example-webserver/

--- a/go-example-webserver/meta/package.yaml
+++ b/go-example-webserver/meta/package.yaml
@@ -1,4 +1,4 @@
-name: httpd-minimal-golang-example
+name: go-example-webserver
 vendor: Alexander Sack <asac@canonical.com>
 architecture: amd64
 icon: meta/go.svg
@@ -6,7 +6,7 @@ version: 1.0.1
 services:
  - name: webserver
    description: "snappy example: golang mini webserver"
-   start: ./golang-httpd-minimal-example
+   start: ./go-example-webserver
 ports:
  required: 80
 
