--- a/go-example-webserver/meta/package.yaml
+++ b/go-example-webserver/meta/package.yaml
@@ -1,12 +1,12 @@
 name: go-example-webserver
 vendor: Alexander Sack <asac@canonical.com>
-architecture: amd64
+architecture: [amd64, armhf]
 icon: meta/go.svg
-version: 1.0.2
+version: 1.0.3
 services:
  - name: webserver
    description: "snappy example: golang mini webserver"
-   start: ./go-example-webserver
+   start: ./magic-bin/go-example-webserver
 ports:
- required: 80
+ required: 8081
 
