--- a/python-xkcd-webserver/meta/package.yaml
+++ b/python-xkcd-webserver/meta/package.yaml
@@ -1,4 +1,4 @@
-name: xkcd-webserver
+name: xkcd-webserver.canonical
 version: 0.3.3
 vendor: Michael Vogt <michael.vogt@ubuntu.com>
 icon: meta/xkcd.svg
