* hello-world/meta/package.yaml: Bump version for store re-upload. * python-xkcd-webserver/meta/package.yaml:   - Bumped version.   - Dropped developer part of package name     (since package names are now "flat").

--- a/python-xkcd-webserver/meta/package.yaml
+++ b/python-xkcd-webserver/meta/package.yaml
@@ -1,5 +1,5 @@
-name: xkcd-webserver.canonical
-version: 0.3.4
+name: xkcd-webserver
+version: 0.3.6
 vendor: Michael Vogt <michael.vogt@ubuntu.com>
 icon: meta/xkcd.svg
 services:
