python-xkcd-webserver/meta/package.yaml: add networking/network-service caps

--- a/python-xkcd-webserver/meta/package.yaml
+++ b/python-xkcd-webserver/meta/package.yaml
@@ -6,4 +6,6 @@ services:
  - name: xkcd-webserver
    start: bin/xkcd-webserver
    description: A fun webserver
-
+   caps:
+   - networking
+   - network-service
