python-xkcd-webserver/meta/package.yaml: bump version number and set vendor to snappy-dev mailinglist

--- a/python-xkcd-webserver/meta/package.yaml
+++ b/python-xkcd-webserver/meta/package.yaml
@@ -1,6 +1,6 @@
 name: xkcd-webserver
-version: 0.3.6
-vendor: Michael Vogt <michael.vogt@ubuntu.com>
+version: 0.4
+vendor: Snappy Developers <snappy-devel@lists.ubuntu.com>
 icon: meta/xkcd.svg
 services:
  - name: xkcd-webserver
