--- a/hello-world/meta/package.yaml
+++ b/hello-world/meta/package.yaml
@@ -1,5 +1,5 @@
 name: hello-world
-version: 1.0.13
+version: 1.0.14
 vendor: Snappy Developers <snappy-devel@lists.ubuntu.com>
 icon: meta/hello.svg
 binaries:
@@ -11,4 +11,5 @@ binaries:
    caps: []
  - name: bin/showdev
    caps: []
-
+ - name: bin/usehw
+   caps: []
