--- a/hello-dbus/package-dir-app/meta/package.yaml
+++ b/hello-dbus/package-dir-app/meta/package.yaml
@@ -1,7 +1,7 @@
 name: hello-dbus-app
 version: 1.0.0
 architecture: [amd64, armhf, i386]
-vendor: Jamie Strandboge <jamie@canonical.com>
+vendor: Snappy Developers <snappy-devel@lists.ubuntu.com>
 icon: meta/hello.svg
 frameworks:
   - hello-dbus-fwk
