--- a/hello-dbus/package-dir-fwk/meta/package.yaml
+++ b/hello-dbus/package-dir-fwk/meta/package.yaml
@@ -1,7 +1,7 @@
 name: hello-dbus-fwk
 version: 1.0.0
 architecture: [amd64, armhf, i386]
-vendor: Jamie Strandboge <jamie@canonical.com>
+vendor: Snappy Developers <snappy-devel@lists.ubuntu.com>
 icon: meta/hello.svg
 type: framework
 services:
