change svgs for pngs, 256x256px

--- a/config-example/meta/package.yaml
+++ b/config-example/meta/package.yaml
@@ -1,7 +1,7 @@
 name: config-example
 version: 1.0.5
 vendor: Michael Vogt <mvo@ubuntu.com>
-icon: meta/hello.svg
+icon: meta/hello.png
 binaries:
  - name: bin/hello
 
