--- a/licensed/meta/package.yaml
+++ b/licensed/meta/package.yaml
@@ -1,5 +1,5 @@
 name: licensed
-icon: meta/icon.svg
+icon: meta/icon.png
 version: 0.1
 vendor: John R. Lenton <john.lenton@canonical.com>
 binaries:
