--- a/config-example-bash/meta/package.yaml
+++ b/config-example-bash/meta/package.yaml
@@ -1,7 +1,7 @@
 name: config-example-bash
 version: 1.0
 vendor: Michael Vogt <mvo@ubuntu.com>
-icon: meta/hello.svg
+icon: meta/hello.png
 binaries:
  - name: bin/hello
 
