--- a/hello-dbus/package-dir-fwk/meta/package.yaml
+++ b/hello-dbus/package-dir-fwk/meta/package.yaml
@@ -2,7 +2,7 @@ name: hello-dbus-fwk
 version: 1.0.0
 architecture: [amd64, armhf, i386]
 vendor: Snappy Developers <snappy-devel@lists.ubuntu.com>
-icon: meta/hello.svg
+icon: meta/hello.png
 type: framework
 services:
  - name: srv
