Some doc nitpicks, flake8 fixes and a service binary fix

--- a/python-xkcd-webserver/meta/package.yaml
+++ b/python-xkcd-webserver/meta/package.yaml
@@ -4,7 +4,7 @@ vendor: Snappy Developers <snappy-devel@lists.ubuntu.com>
 icon: meta/xkcd.png
 services:
  - name: xkcd-webserver
-   start: bin/xkcd-webserver
+   start: ./bin/xkcd-webserver
    description: A fun webserver
    caps:
    - networking
