--- a/framework-template/meta/package.yaml
+++ b/framework-template/meta/package.yaml
@@ -5,7 +5,7 @@ icon: meta/hello.png
 type: framework
 services:
  - name: svc
-   start: bin/svc.start
+   start: bin/svc
    description: "Example service"
    security-policy:
      apparmor: meta/svc.apparmor
@@ -16,4 +16,3 @@ binaries:
    description: "Example command that uses the above service"
    caps:
     - fwk-name_client
-    - network-client
